change font and fix spacing

--- a/app/assets/stylesheets/body.css
+++ b/app/assets/stylesheets/body.css
@@ -17,7 +17,7 @@ div.app {
 }
 
 div.app-container {
-  width: 940px;
+  width: 1025px;
   margin: 8px;
   border-radius: 5px;
   border: 1px solid lightgrey;
