--- a/app/assets/stylesheets/quicklinks-bar.css
+++ b/app/assets/stylesheets/quicklinks-bar.css
@@ -1,5 +1,5 @@
 .quicklinks-bar {
-  width: 700px;
+  width: 750px;
   float: left;
 }
 
