--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -1,6 +1,6 @@
 .welcome-block {
   display: block;
-  width: 800px;
+  width: 830px;
   margin: 10px 80px;
   padding: 5px;
 }
